EKS/k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deploy
  labels:
    name: website-deploy
    app: website-app
spec:
  replicas: 3
  selector:
    matchLabels:
      name: website-pod
      app: website-app
  template:
    metadata:
      name: website-pod
      labels:
        name: website-pod
        app: website-app
    spec:
      tolerations:
        - effect: NoSchedule
          operator: Equal
          key: owner
          value: blue
      containers:
      - name: website
        image: damola12345/website:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
