EKS/k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  labels:
    name: website-service
    app: website-app
spec:
  selector:
    app: website-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
