EKS/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-2023-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: 2023.blue.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: website-service
              port:
               number: 80
  tls:
    - hosts:
        - 2023.blue.com
      secretName: letsencrypt-prod
